--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
-1 Endurance Promise <promiseendurance92@gmail.com>
+1-Mesfin Fikrea Nigusea <fikreamesfin@gmail.com>
+2-Endurance Promise <promiseendurance92@gmail.comi>
